[gd_scene load_steps=7 format=2]

[ext_resource path="res://Better Celestial Bodies/CelestialBody.tscn" type="PackedScene" id=1]
[ext_resource path="res://Better Celestial Bodies/Planet/PlanetType.gd" type="Script" id=2]
[ext_resource path="res://Assets/Materials/LightingShader.gdshader" type="Shader" id=3]
[ext_resource path="res://Assets/Textures/Celestial Objects/Planets/earth_PNG8.png" type="Texture" id=4]

[sub_resource type="Gradient" id=2]
resource_local_to_scene = true
offsets = PoolRealArray( 0.362694, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 1 )

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 3 )
shader_param/background_light_level = 0.05
shader_param/amount = 0
shader_param/planet_position = Vector2( 0, 0 )
shader_param/angle = null
shader_param/stipness = 30.0

[node name="Planet" instance=ExtResource( 1 )]

[node name="Tail" parent="." index="0"]
gradient = SubResource( 2 )

[node name="Type" parent="." index="2"]
script = ExtResource( 2 )

[node name="Body" type="Sprite" parent="Type" index="0"]
material = SubResource( 1 )
scale = Vector2( 0.05, 0.05 )
z_index = 1
texture = ExtResource( 4 )

[connection signal="area_entered" from="CollisionArea" to="." method="_on_CollisionArea_area_entered"]
[connection signal="change_mass" from="Type" to="." method="_change_mass"]
[connection signal="change_radius" from="Type" to="." method="_change_radius"]
[connection signal="change_type" from="Type" to="." method="_change_type"]
[connection signal="change_velocity" from="Type" to="." method="_change_velocity"]
